--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ author: phlow
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://williamhotlam.github.io'
-baseurl: '/pages/pages-root-folder'
+url: 'https://williamhotlam.github.io/feeling-responsive'
+baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
