--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,9 +2,13 @@
   url: "/"
   side: left
 
-- title: Getting Started
-  url: "/getting-started/"
+- title: About Me
+  url: "/about/"
   side: left
+
+# - title: Getting Started
+#   url: "/getting-started/"
+#   side: left
 
 - title: "Templates"
   url: "/design/"
