--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -67,6 +67,8 @@
   url: "/blog/"
   side: left
   dropdown:
+  - title: "Blog"
+    url: "/blog/"
   - title: "Blog Archive"
     url: "/blog/archive/"
 
